objects/CSC_File_Upload_Audit__c.object
<CustomObject>
    <description>RN - CloudSmiths
Keep a copy of any file a CSC Agent uploads and prevent a user form deleting these files</description>
    <fields>
        <fullName>CSC_Support_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSC Support Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CSC File Upload Audit</relationshipLabel>
        <relationshipName>CSC_File_Upload_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocVersionID__c</fullName>
        <label>DocVersionID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSC File Upload Audit</label>
    <nameField>
        <displayFormat>AUDITFILE-{0000000000}</displayFormat>
        <label>CSC File Upload Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSC File Upload Audit</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>